--- a/style.css
+++ b/style.css
@@ -21,3 +21,143 @@ body {
 */
 
 /* ----- zde zacni psat vlastni css ----- */
+
+
+.vizual {
+	padding: 30px;
+	margin-left: 100px;
+	width:335px;	
+	margin-top: 100px;
+	height: 440px;
+	float:left;
+	background: linear-gradient(#06d7c1, #50cc49);
+	border-top-left-radius: 20px;
+	border-bottom-left-radius: 20px;
+	box-shadow: 10px 9px 5px 0px rgba(230,218,230,1);
+}
+
+.detaily {
+	font-size: 14px;
+	padding: 30px;
+	margin-right:100px;
+	width:335px;	
+	margin-top: 100px;	
+	height: 440px;
+	float:left;
+	background-color:  #f5f5f5;
+	border-top-right-radius: 20px;
+	border-bottom-right-radius: 20px;
+	box-shadow: 10px 9px 5px 0px rgba(230,218,230,1);
+}
+
+.zbozi {
+	font-family: 'Rubik', sans-serif;
+	font-weight: 400;
+	font-size: 14px;
+}
+
+.nazev {
+	font-size: 20px;
+	text-transform: uppercase;
+}
+
+.popis {
+	padding-top: 30px;
+	padding-bottom: 30px;
+	border-bottom:  #06d7c1;
+	border-width: 2px;
+}
+
+.produkt {
+	color: #959595;
+}
+
+.parametr {
+	border-width: 2px;
+	text-transform: uppercase;
+	font-size: 14px;
+}
+
+.velikosti li{
+	padding-block-start: 30px;
+	display: inline-block;
+	padding: 11px;
+}
+
+ul {
+	text-align: left;
+	padding-left: 0px;
+}
+
+
+.velikosti li:hover{
+	color: #f15f42;
+	box-shadow: 0 0 7px 0px #f15f42;
+	border-radius: 100%;}
+
+.tlacitko {
+	position: absolute;
+	display: inline-block;
+	background: #f15f42;
+	border-radius: 10px;
+	width: 150px;
+	z-index: +1;
+	left: 475px;
+	top: 482px;
+	padding: 10px;
+	text-transform: uppercase;	
+	text-align: center;
+	color: #f5f5f5;
+}
+
+.tlacitko {
+text-decoration: none;
+box-shadow: 5px 3px 2px 0px rgba(230,218,230,1);
+}
+
+.akce a:hover {
+	background-color: #F58D7A;
+}
+
+.bota {
+	position: absolute;
+	left: 30px;
+	top:250px;
+}
+
+.logo {
+	position: absolute;
+	z-index: +1;
+	height: 30px;
+	left: 130px;
+	top: 130px;
+}
+
+.slogan {
+	position: absolute;
+	margin:0;
+	top: 184px;
+	left: 130px;
+	font-size: 16px;
+	font-weight: 500;
+	color: #f5f5f5;
+}
+
+.cenovka {
+	color: #f5f5f5;
+}
+
+.cena {
+	position: absolute;
+	top: 460px;
+	left: 298px;
+	font-size: 28px;
+	font-weight: 500;
+}
+
+.zaruka {
+	position: absolute;
+	top: 496px;
+	left: 258px;
+	font-size: 12px;
+}
