--- a/style.css
+++ b/style.css
@@ -24,12 +24,12 @@ body {
 
 
 .vizual {
+	position: relative;
 	padding: 30px;
-	margin-left: 100px;
 	width:335px;	
-	margin-top: 100px;
 	height: 440px;
 	float:left;
+	margin-left: 100px;		
 	background: linear-gradient(#06d7c1, #50cc49);
 	border-top-left-radius: 20px;
 	border-bottom-left-radius: 20px;
@@ -37,11 +37,10 @@ body {
 }
 
 .detaily {
+	position: relative;
 	font-size: 14px;
 	padding: 30px;
-	margin-right:100px;
 	width:335px;	
-	margin-top: 100px;	
 	height: 440px;
 	float:left;
 	background-color:  #f5f5f5;
@@ -51,13 +50,15 @@ body {
 }
 
 .zbozi {
+	position:relative;
 	font-family: 'Rubik', sans-serif;
+	margin: auto;
 	font-weight: 400;
 	font-size: 14px;
 }
 
 .nazev {
-	font-size: 20px;
+	font-size: 19px;
 	text-transform: uppercase;
 }
 
@@ -75,7 +76,6 @@ body {
 }
 
 .parametr {
-	border-width: 2px;
 	text-transform: uppercase;
 	font-size: 14px;
 }
@@ -104,8 +104,8 @@ ul {
 	border-radius: 10px;
 	width: 150px;
 	z-index: +1;
-	left: 475px;
-	top: 482px;
+	left: 30px;
+	top: 382px;
 	padding: 10px;
 	text-transform: uppercase;	
 	text-align: center;
@@ -123,23 +123,21 @@ box-shadow: 5px 3px 2px 0px rgba(230,218,230,1);
 
 .bota {
 	position: absolute;
-	left: 30px;
-	top:250px;
+	left: -80px;
+	top:120px;
 }
 
 .logo {
 	position: absolute;
 	z-index: +1;
 	height: 30px;
-	left: 130px;
-	top: 130px;
 }
 
 .slogan {
 	position: absolute;
 	margin:0;
-	top: 184px;
-	left: 130px;
+	top: 84px;
+	left: 30px;
 	font-size: 16px;
 	font-weight: 500;
 	color: #f5f5f5;
@@ -151,15 +149,15 @@ box-shadow: 5px 3px 2px 0px rgba(230,218,230,1);
 
 .cena {
 	position: absolute;
-	top: 460px;
-	left: 298px;
+	top: 360px;
+	left: 198px;
 	font-size: 28px;
 	font-weight: 500;
 }
 
 .zaruka {
 	position: absolute;
-	top: 496px;
-	left: 258px;
+	top: 396px;
+	left: 158px;
 	font-size: 12px;
 }
